--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   custom_timer: ^0.0.3
   simple_timer: ^2.0.0
   provider: ^5.0.0
+  splashscreen: ^1.3.5
+  flutter_slidable:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
