--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,11 @@ dependencies:
   provider: ^5.0.0
   splashscreen: ^1.3.5
   flutter_slidable:
-
+  sizer: ^2.0.13
+  switcher_button: ^0.0.3
+  wakelock: ^0.5.2
+  open_settings: ^2.0.1
+  sound_mode: ^1.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
